--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="head-section">
+        <div class="word-wraper">
+            <h1>Welcome To</h1>
+            <h2><span>Peter Parker</span> World</h2>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <button>HIRE ME</button>
+
+        </div>
+        <div class="img-wraper">
+            <img src="img/jhankar.png" alt="">
+
+        </div>
+
+
+    </section>
     
 </body>
 </html>
